[gd_scene load_steps=21 format=4 uid="uid://cm3iyye86l1fs"]

[ext_resource type="PackedScene" uid="uid://c3lnqei4itfpx" path="res://Prefab/TowerDefense/Character/TowerDefensePlant.tscn" id="1"]
[ext_resource type="Script" uid="uid://bjrqg8s0h6cgy" path="res://Asset/Anime/Character/Plant/Chapter2/WinterMelonShroom/Scene/TowerDefensePlantWinterMelonShroom.gd" id="2"]
[ext_resource type="Script" uid="uid://b7bsdfdfctvuh" path="res://Resource/TowerDefense/Character/Event/General/TowerDefenseCharacterEventIceSpeedDown.gd" id="3"]
[ext_resource type="Script" uid="uid://cmqmtitj4tcd8" path="res://Resource/TowerDefense/Character/Event/General/TowerDefenseCharacterEventHurt.gd" id="4"]
[ext_resource type="Resource" uid="uid://c8lp8chbk41ak" path="res://Asset/Anime/Character/Plant/Chapter2/WinterMelonShroom/Config/TowerDefensePlantWinterMelonShroom.tres" id="5"]
[ext_resource type="PackedScene" uid="uid://dxyshcy0oo4g8" path="res://Asset/Anime/Character/Plant/Chapter2/WinterMelonShroom/WinterMelonShroom.tscn" id="6"]
[ext_resource type="Script" uid="uid://b6lojhfkgvhsw" path="res://addons/AdobeAnimateEditor/Node/AdobeAnimateSlot.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://b3ethraampx0w" path="res://Asset/Texture/TowerDefense/Projectile/PuffShroomSnowPuff.png" id="8"]
[ext_resource type="PackedScene" uid="uid://b5htxrgm8twcr" path="res://Script/Component/TowerDefense/Character/FireComponent/FireComponent.tscn" id="9"]
[ext_resource type="PackedScene" uid="uid://dir0f8lu1l3b3" path="res://Script/Component/TowerDefense/Character/AttackComponent/AttackComponent.tscn" id="10"]
[ext_resource type="Script" uid="uid://domu0k4tfig2c" path="res://addons/godot_state_charts/atomic_state.gd" id="11"]
[ext_resource type="Script" uid="uid://bnuagwct5sv5y" path="res://addons/godot_state_charts/transition.gd" id="12"]

[sub_resource type="Resource" id="Resource_snlq4"]
script = ExtResource("3")
time = 15.0
fliterShield = false
metadata/_custom_type_script = "uid://b7bsdfdfctvuh"

[sub_resource type="Resource" id="Resource_rw0y7"]
script = ExtResource("4")
num = 20.0
playSplatAudio = true
damageFlags = 2
collisionFlags = 9
Flag/Damage = 2
Flag/Collision = 9
metadata/_custom_type_script = "uid://cmqmtitj4tcd8"

[sub_resource type="Curve" id="Curve_8wwub"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.589744, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_4p3xn"]
curve = SubResource("Curve_8wwub")

[sub_resource type="Curve" id="Curve_snlq4"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 38.1566), 0.0, 0.0, 0, 0, Vector2(0.535897, 100), 0.0, 0.0, 0, 0, Vector2(1, 100), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_rw0y7"]
curve = SubResource("Curve_snlq4")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bxw42"]
lifetime_randomness = 0.38
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 10.0
spread = 1.0
flatness = 0.552
initial_velocity_min = 240.58
initial_velocity_max = 788.5
gravity = Vector3(0, 0, 0)
damping_min = 3.199
damping_max = 36.884
damping_curve = SubResource("CurveTexture_rw0y7")
scale_min = 0.6
scale_max = 0.9
alpha_curve = SubResource("CurveTexture_4p3xn")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_o5pol"]
b = Vector2(100, 0)

[node name="TowerDefensePlantWinterMelonShroom" node_paths=PackedStringArray("sprite") instance=ExtResource("1")]
script = ExtResource("2")
fireInterval = 1.5
eventList = [SubResource("Resource_snlq4"), SubResource("Resource_rw0y7")]
sleepAnimeClip = "Sleep"
config = ExtResource("5")
sprite = NodePath("SpriteGroup/TransformPoint/WinterMelonShroom")
Custom = []

[node name="TransformPoint" parent="SpriteGroup" index="1"]
position = Vector2(0, 30)

[node name="WinterMelonShroom" parent="SpriteGroup/TransformPoint" index="0" node_paths=PackedStringArray("layerSlot") instance=ExtResource("6")]
position = Vector2(0, -30)
layerSlot = [null, null, null, null, null, null, null, null, null, null, null, null, null, NodePath("AdobeAnimateSlot"), null, null, null]

[node name="AdobeAnimateSlot" type="Node2D" parent="SpriteGroup/TransformPoint/WinterMelonShroom" index="0"]
position = Vector2(36.29, -20.3)
rotation = 0.0109182
scale = Vector2(0.847443, 0.753218)
skew = -0.0109183
script = ExtResource("7")
followSlotId = 14
metadata/_custom_type_script = "uid://b6lojhfkgvhsw"

[node name="Marker2D" type="Marker2D" parent="SpriteGroup/TransformPoint/WinterMelonShroom/AdobeAnimateSlot" index="0"]
position = Vector2(-42.6892, 13.0919)

[node name="FireParticles" type="GPUParticles2D" parent="SpriteGroup/TransformPoint/WinterMelonShroom/AdobeAnimateSlot" index="1"]
unique_name_in_owner = true
z_index = 3
position = Vector2(8.79036, 13.2048)
rotation = -0.0306024
scale = Vector2(1.21982, 1.28157)
skew = 0.0306022
emitting = false
amount = 64
texture = ExtResource("8")
lifetime = 0.75
one_shot = true
explosiveness = 0.4
randomness = 0.4
process_material = SubResource("ParticleProcessMaterial_bxw42")

[node name="ShadowSprite" parent="." index="3"]
position = Vector2(0, 24.5)
scale = Vector2(1.2093, 1.47222)

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(0, 0)

[node name="FireComponent" parent="." index="8" node_paths=PackedStringArray("firePosMarker") instance=ExtResource("9")]
unique_name_in_owner = true
firePosMarker = [NodePath("../SpriteGroup/TransformPoint/WinterMelonShroom/AdobeAnimateSlot/Marker2D")]

[node name="AttackComponent" parent="." index="9" node_paths=PackedStringArray("checkArea") instance=ExtResource("10")]
unique_name_in_owner = true
attackType = "Default"
checkArea = NodePath("Area2D")

[node name="Area2D" type="Area2D" parent="AttackComponent" index="0"]
collision_layer = 0
monitorable = false

[node name="CheckShape" type="CollisionShape2D" parent="AttackComponent/Area2D" index="0"]
unique_name_in_owner = true
shape = SubResource("SegmentShape2D_o5pol")

[node name="Attack" type="Node" parent="StateChart/CompoundState" index="2"]
script = ExtResource("11")

[node name="ToAttack" type="Node" parent="StateChart/CompoundState" index="6"]
script = ExtResource("12")
to = NodePath("../Attack")
event = &"ToAttack"
delay_in_seconds = "0.0"

[connection signal="state_entered" from="StateChart/CompoundState/Attack" to="." method="AttackEntered"]
[connection signal="state_exited" from="StateChart/CompoundState/Attack" to="." method="AttackExited"]
[connection signal="state_physics_processing" from="StateChart/CompoundState/Attack" to="." method="AttackProcessing"]
